<resources>
    <string name="app_name">Currency Converter</string>
    <string name="details">Currency Details</string>
    <string name="other_currencies">Other Currencies</string>
    <string name="app_error">Sorry, something went wrong</string>
    <string name="internet_error">No Internet Connection</string>
    <string name="dismiss">Dismiss</string>
    <string name="loading">Loading...</string>
    <string name="convert">Convert</string>
    <string name="currency_history">Currency History</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="swap">Swap</string>
    <string name="currency">Currency</string>
    <string name="rate">Rate</string>
    <string name="per_rate">Per Rate</string>
</resources>