<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.main.CurrencyConverterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size_20">

        <TextView
            android:id="@+id/tvFrom"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/from" />

        <TextView
            android:id="@+id/tvTo"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/to" />


        <Spinner
            android:id="@+id/spFromCurrency"
            android:layout_width="@dimen/size_130"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFrom"
            android:background="@android:drawable/spinner_background"
            android:padding="@dimen/size_20" />

        <ImageView
            android:id="@+id/ivSwap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFrom"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/size_20"
            android:contentDescription="@string/swap"
            app:srcCompat="@drawable/ic_swap" />

        <Spinner
            android:id="@+id/spToCurrency"
            android:layout_width="@dimen/size_130"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTo"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/spinner_background"
            android:padding="@dimen/size_20" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFrom"
            android:layout_width="@dimen/size_130"
            android:layout_height="wrap_content"
            android:layout_below="@id/spFromCurrency"
            android:layout_marginTop="@dimen/size_20"
            android:inputType="numberDecimal"
            android:maxLength="50"
            android:text="@={viewModel.convertedFromValue}" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTo"
            android:layout_width="@dimen/size_130"
            android:layout_height="wrap_content"
            android:layout_below="@id/spToCurrency"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/size_20"
            android:inputType="numberDecimal"
            android:maxLength="50"
            android:text="@={viewModel.convertedToValue}" />

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFrom"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/convert" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFrom"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/currency_history" />

        <TextView
            android:id="@+id/tvOtherCurrencyTitle"
            style="@style/textSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnDetails"
            android:layout_marginTop="@dimen/size_20"
            android:background="@color/teal_700"
            android:gravity="center_horizontal"
            android:text="@string/other_currencies"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_other_currency"
            android:orientation="horizontal"
            android:background="@color/teal_200"
            android:layout_below="@id/tvOtherCurrencyTitle"
            android:weightSum="10">
            <TextView
                style="@style/textSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/currency" />

            <TextView
                style="@style/textSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/rate" />

            <TextView
                style="@style/textSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/per_rate" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOtherCurrency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_other_currency"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:otherCurrencyItems="@{viewModel.otherCurrency}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>

</layout>